[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bech32 = "0.9.1"
bip32 = { version = "0.4.0", features = ["secp256k1"] }
contracts = { path = "../generated/contracts" }
ethereum-consensus = { path = "../lib/ethereum-consensus" }
ethers = { version = "2.0.4", features = ["rustls"] }
futures = "0.3.28"
hex-literal = "0.4.1"
lodestar-rpc = { path = "../lib/lodestar-rpc", default-features = false }
num-bigint = "0.4"
k256 = "0.11"
prost = "*"
protos = { path = "../generated/rust", features = ["proto_full", "client"] }
reqwest = { version = "0.11.17", default-features = false, features = ["tokio-rustls"] }
ripemd = "0.1.3"
serde_json = "1.0.96"
sha2 = "0.10.6"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
tendermint = "0.32.0"
tendermint-proto = "0.32"
tendermint-rpc = {version = "0.32.0", features = ["http-client", "websocket-client"]}
tokio = { version = "1.27.0", features = ["macros"] }
tonic = { version = "0.8", features = ["transport","tls","tls-roots","tls-webpki-roots"] }
tower = { version = "*", features = ["log"] }
tracing-subscriber = "0.3"