[workspace]
members = [
  "forks/*",
  "ethereum-light-client",
  "wasm-light-client-types",
  "protos",
  "serde-utils"
]

resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
