[package]
edition    = { workspace = true }
name       = "ucli"
repository = { workspace = true }
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap       = { workspace = true, features = ["default", "derive", "env", "error-context"] }
ethers     = { workspace = true, features = ["rustls", "ws"] }
hex        = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["macros"] }

beacon-api     = { workspace = true, default-features = false }
chain-utils    = { workspace = true }
contracts      = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client", "websocket-client"] }
unionlabs      = { workspace = true, features = ["ethabi"] }

[features]
eth-minimal = []
