[package]
edition      = { workspace = true }
license-file = { workspace = true }
name         = "unionvisor"
publish      = false
repository   = { workspace = true }
version      = "0.1.0"

[lints]
workspace = true

[package.metadata.crane]
test-include = ["unionvisor/src/testdata/"]

[dependencies]
clap               = { workspace = true, features = ["derive", "env", "default"] }
color-eyre         = { workspace = true, features = ["default"] }
figment            = { version = "0.10.8", features = ["toml", "json"] }
fs_extra           = "1.3.0"
reqwest            = { workspace = true, features = ["blocking", "rustls-tls"] }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "tracing-log"] }

[dev-dependencies]
tempfile     = "3.5.0"
tracing-test = "0.2.4"
