[package]
name    = "unionvisor"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[package.metadata.crane]
test-include = ["unionvisor/src/testdata/"]

[dependencies]
clap               = { workspace = true, features = ["derive", "env", "default"] }
color-eyre         = { workspace = true, features = ["default"] }
fs_extra           = "1.3.0"
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "tracing-log"] }

[dev-dependencies]
tempfile     = "3.5.0"
tracing-test = "0.2.4"
