[package]
name    = "voyager"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

include = []

[package.metadata.crane]
test-include = []

[lints]
workspace = true

[dependencies]
anyhow                = { workspace = true }
clap                  = { workspace = true, features = ["default", "derive", "env", "error-context", "color"] }
derive_more           = { workspace = true }
embed-commit          = { workspace = true }
futures               = { workspace = true }
ibc-classic-spec      = { workspace = true }
ibc-union-spec        = { workspace = true, features = ["serde"] }
jsonrpsee             = { workspace = true, features = ["client", "full", "tracing"] }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true, features = ["http-json", "metrics", "reqwest-blocking-client"] }
opentelemetry_sdk     = { workspace = true }
pg-queue              = { workspace = true }
reqwest               = { workspace = true, features = ["tokio-rustls", "json"] }
schemars              = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde_json            = { workspace = true }
serde_jsonc           = "1.0.108"
sqlx                  = { workspace = true, features = ["postgres", "migrate", "tls-rustls"] }
thiserror             = { workspace = true }
tikv-jemallocator     = "0.5"
tokio                 = { workspace = true, features = ["macros"] }
tracing               = { workspace = true, features = ["max_level_trace"] }
tracing-opentelemetry = "0.32.1"
tracing-subscriber    = { workspace = true, features = ["env-filter", "json"] }
unionlabs             = { workspace = true, features = ["ethabi"] }
voyager-client        = { workspace = true }
voyager-core          = { workspace = true }
voyager-message       = { workspace = true }
voyager-primitives    = { workspace = true }
voyager-rpc           = { workspace = true }
voyager-types         = { workspace = true }
voyager-vm            = { workspace = true }

[features]
default = []
