[package]
name    = "access-managed"
version = "0.0.0"

authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
publish    = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
access-manager-types = { workspace = true }
cosmwasm-std         = { workspace = true, features = ["cosmwasm_1_3", "staking"] }
depolama             = { workspace = true, features = ["iterator"] }
embed-commit         = { workspace = true }
frissitheto          = { workspace = true }
schemars             = { workspace = true, optional = true }
serde                = { workspace = true, features = ["derive"] }
serde-json-wasm      = { workspace = true }
thiserror            = { workspace = true }
unionlabs-encoding   = { workspace = true, features = ["bincode"] }

[dev-dependencies]
hex-literal = { workspace = true }
itertools   = { workspace = true }

[features]
default = []

library  = []
schemars = ["dep:schemars", "access-manager-types/schemars"]

# TODO: Do something like this so the solidity codeblocks are highlighted correctly: https://users.rust-lang.org/t/how-did-slint-create-custom-syntax-highlight-link-and-preview-for-their-code-examples/85294/2
