[package]
name    = "access-manager"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
access-manager-types = { workspace = true }
bincode              = { workspace = true, features = ["derive"] }
cosmwasm-std         = { workspace = true, features = ["cosmwasm_1_3", "staking"] }
depolama             = { workspace = true, features = ["iterator"] }
embed-commit         = { workspace = true }
frissitheto          = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde-json-wasm      = { workspace = true }
serde-utils          = { workspace = true }
sha2                 = { workspace = true }
strum                = { workspace = true, features = ["derive"] }
thiserror            = { workspace = true }
unionlabs-encoding   = { workspace = true, features = ["bincode"] }
unionlabs-primitives = { workspace = true, features = ["bincode", "serde", "generic-array-compat"] }

[features]
default = []
library = []

[dev-dependencies]
hex-literal = { workspace = true }
itertools   = { workspace = true }

# TODO: Do something like this so the solidity codeblocks are highlighted correctly: https://users.rust-lang.org/t/how-did-slint-create-custom-syntax-highlight-link-and-preview-for-their-code-examples/85294/2
