[package]
name    = "cw-account"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["cosmwasm_1_3"] }
cw-storage-plus = { workspace = true }
embed-commit    = { workspace = true }
frissitheto     = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
thiserror       = { workspace = true }
unionlabs       = { workspace = true, features = ["schemars"] }

[dev-dependencies]
hex-literal = { workspace = true }

[lints]
workspace = true
