[package]
name    = "cw-account"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
bincode              = { workspace = true, features = ["derive"] }
cosmwasm-std         = { workspace = true, features = ["cosmwasm_2_0", "staking", "stargate"] } # enable all features so that any message is dispatchable
depolama             = { workspace = true, features = ["iterator"] }
embed-commit         = { workspace = true }
frissitheto          = { workspace = true }
ibc-union-spec       = { workspace = true, features = ["bincode"] }
schemars             = { workspace = true, optional = true, features = ["derive"] }
serde                = { workspace = true, features = ["derive"] }
thiserror            = { workspace = true }
ucs03-zkgmable       = { workspace = true }
unionlabs-encoding   = { workspace = true, features = ["bincode"] }
unionlabs-primitives = { workspace = true, features = ["bincode"] }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default  = []
schemars = ["dep:schemars"]
