[package]
name    = "cw-manager"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std    = { workspace = true, features = ["cosmwasm_1_3", "staking"] }
embed-commit    = { workspace = true }
frissitheto     = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
serde-json-wasm = "1.0.0"
serde_json.workspace = true
thiserror       = { workspace = true }
