[package]
name    = "cw-unionversal-token"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
bincode                   = { workspace = true }
cosmwasm-schema           = { workspace = true }
cosmwasm-std              = { workspace = true, features = ["cosmwasm_1_3", "iterator"] }
cw-storage-plus           = { workspace = true }
cw20                      = { workspace = true }
cw20-base                 = { workspace = true, features = ["library"] }
cw20-ctx                  = { workspace = true }
cw20-wrapped-tokenfactory = { workspace = true, features = ["library"] }
depolama                  = { workspace = true, features = ["iterator"] }
embed-commit              = { workspace = true }
frissitheto               = { workspace = true }
ibc-union-spec            = { workspace = true, features = ["serde", "ethabi", "bincode"] }
serde                     = { workspace = true, features = ["derive"] }
serde_json                = { workspace = true, features = ["raw_value"] }
thiserror                 = { workspace = true }
token-factory-api         = { workspace = true }
ucs03-solvable            = { workspace = true, features = [] }
ucs03-zkgm                = { workspace = true, features = ["library"] }
unionlabs-encoding        = { workspace = true, features = ["bincode"] }
unionlabs-primitives      = { workspace = true, features = ["schemars"] }
