[package]
name    = "cw20-multibalance"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = { workspace = true  }
cosmwasm-std    = { workspace = true,  features = ["stargate"] }
cw20            = { version = "2.0" }
cw-storage-plus = { workspace = true }
thiserror       = { workspace = true }
