[package]
authors.workspace      = true
edition.workspace      = true
license-file.workspace = true
name                   = "cw20-token-minter"
publish.workspace      = true
repository.workspace   = true
version                = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema             = { version = "1.5" }
cosmwasm-std                = { version = "1.5", features = [ "cosmwasm_1_3"] }
cw-storage-plus             = { version = "1.2" }
cw20                        = "1.1.2"
cw20-base                   = { version = "1.1.2", features = ["library"] }
serde                       = { workspace = true, features = ["derive"] }
thiserror                   = { workspace = true }
token-factory-api           = { workspace = true }
ucs03-zkgm-token-minter-api = { workspace = true }

[lints]
workspace = true
