[package]
authors.workspace      = true
edition.workspace      = true
license-file.workspace = true
name                   = "cw20-token-minter"
publish.workspace      = true
repository.workspace   = true
version                = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy                       = { workspace = true, features = ["sol-types"] }
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true, features = ["cosmwasm_1_3"] }
cw-storage-plus             = { workspace = true }
cw20                        = { version = "2.0" }
cw20-base                   = { version = "2.0", features = ["library"] }
serde                       = { workspace = true, features = ["derive"] }
thiserror                   = { workspace = true }
token-factory-api           = { workspace = true }
ucs03-zkgm-token-minter-api = { workspace = true }
unionlabs                   = { workspace = true, features = ["schemars"] }

[lints]
workspace = true
