[package]
name    = "cw20-token-minter"
version = "0.0.0"

authors      = { workspace = true }
edition      = { workspace = true }
license-file = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
alloy-primitives            = { workspace = true }
alloy-sol-types             = { workspace = true }
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true, features = ["cosmwasm_1_3"] }
cw-storage-plus             = { workspace = true }
cw20                        = { version = "2.0" }
cw20-base                   = { workspace = true }
embed-commit                = { workspace = true }
frissitheto                 = { workspace = true }
ibc-union-spec              = { workspace = true }
serde                       = { workspace = true, features = ["derive"] }
thiserror                   = { workspace = true }
token-factory-api           = { workspace = true }
ucs03-zkgm-token-minter-api = { workspace = true }
unionlabs                   = { workspace = true, features = ["schemars"] }

[dev-dependencies]
hex-literal = { workspace = true }
